# protorpc

./: README.md
gopath/src/encoding/protobuf/proto/: all_test.go  clone.go  clone_test.go  decode.go  encode.go  equal.go  equal_test.go  extensions.go  lib.go  message_set.go  pointer_reflect.go  pointer_unsafe.go  properties.go  size.go  size2_test.go  size_test.go  text.go  text_parser.go  text_parser_test.go  text_test.go
gopath/src/encoding/protobuf/proto/testdata/: golden_test.go  test.pb.go
gopath/src/encoding/protobuf/protoc-gen-go/: doc.go  main.go
gopath/src/encoding/protobuf/protoc-gen-go/descriptor/: descriptor.pb.go
gopath/src/encoding/protobuf/protoc-gen-go/generator/: generator.go  service.go
gopath/src/encoding/protobuf/protoc-gen-go/plugin/: plugin.pb.go
gopath/src/encoding/protobuf/protoc-gen-go/testdata/: extension_test.go  golden_test.go  main_test.go
gopath/src/encoding/protobuf/protoc-gen-go/testdata/my_test/: test.pb.go
gopath/src/net/rpc/protorpc/: all_test.go
gopath/src/net/rpc/protorpc/message.pb/: arith.pb.go  echo.pb.go  update_pb.bat
gopath/src/net/rpc/protorpc/service.pb/: all_test.go  arith.pb.go  arith_test.go  echo.proto  echo_test.go
protobuf/: CMakeLists.txt  build-debug-proj.bat  build-debug.bat  build-mt.bat  build.bat
protobuf/doc/: build_docs.bat  cpp-generated.html  cpp-generated.t2t  cpptutorial.html  cpptutorial.t2t  encoding.html  encoding.t2t  overview.html  overview.t2t  proto.html  proto.t2t  style.html  style.t2t  techniques.html  techniques.t2t
protobuf/src/google/protobuf/compiler/: main.cc
protobuf/src/google/protobuf/compiler/cxx/: cxx_enum.cc  cxx_enum_field.cc  cxx_enum_field.h  cxx_extension.cc  cxx_field.cc  cxx_file.cc  cxx_file.h  cxx_generator.cc  cxx_helpers.cc  cxx_message.cc  cxx_message.h  cxx_message_field.cc  cxx_message_field.h  cxx_plugin_unittest.cc  cxx_primitive_field.cc  cxx_primitive_field.h  cxx_service.cc  cxx_string_field.cc  cxx_string_field.h  cxx_unittest.cc
protobuf/src/google/protobuf/rpc/: rpc_client.cc  rpc_client.h  rpc_conn.cc  rpc_conn.h  rpc_env.h  rpc_env_posix.cc  rpc_env_windows.cc  rpc_server.cc  rpc_server.h  rpc_server_conn.cc  rpc_server_conn.h  rpc_service.cc  rpc_service.h
protobuf/src/google/protobuf/rpc/example/: rpcclient.cc  rpcclient.go  rpcserver.cc  rpcserver.go  rpctest.cc
protobuf/src/google/protobuf/rpc/service.pb/: arith.pb.cc  arith.pb.h  arith.proto  echo.pb.cc  echo.pb.go  echo.pb.h  echo.proto  message.pb.cc  message.pb.go  message.pb.h  message.proto  update_pb.bat
protobuf/src/google/protobuf/rpc/wire.pb/: update_pb.bat  wire.pb.cc  wire.pb.h  wire.proto
protobuf/src/google/protobuf/stubs/: defer.h
protobuf/src/google/protobuf/xml/: xml_message.cc  xml_message.h
protobuf/src/google/protobuf/xml/example/: golden.xml
protobuf/src/google/protobuf/xml/example/xml.pb/: XmlTest.pb.cc  XmlTest.pb.h  XmlTest.proto  update_pb.bat
